--- a/Shrek2ModdingSDK/Shrek2ModManager/MainWindow.xaml
+++ b/Shrek2ModdingSDK/Shrek2ModManager/MainWindow.xaml
@@ -4,9 +4,148 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Shrek2ModManager"
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+        TextElement.Foreground="{DynamicResource MaterialDesignBody}"
+        TextElement.FontWeight="Regular"
+        ResizeMode="NoResize"
+        Loaded="Window_Loaded"
+        WindowStartupLocation="CenterScreen"
+        TextElement.FontSize="13"
+        TextOptions.TextFormattingMode="Ideal" 
+        TextOptions.TextRenderingMode="Auto"        
+        Background="{DynamicResource MaterialDesignLightBackground}"
+        FontFamily="{DynamicResource MaterialDesignFont}"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="Shrek 2 Mod Manager" Height="700" Width="900" Icon="pack://siteoforigin:,,,/Resources/s2mmlogo.png">
     <Grid>
-        
+        <StackPanel>
+
+            <!-- Navigation -->
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="0.5*"/>
+                    <ColumnDefinition Width="0.5*"/>
+                </Grid.ColumnDefinitions>
+                <StackPanel Orientation="Horizontal" Margin="0,10,0,0" Grid.Column="0">
+                    <Button x:Name="Nav_Button_Overview" Style="{StaticResource MaterialDesignRaisedButton}" Margin="10,0,0,0" BorderThickness="0" Content="Overview" Background="#65a338"/>
+                    <Button x:Name="Nav_Button_Mods" Style="{StaticResource MaterialDesignRaisedButton}" Margin="10,0,0,0" BorderThickness="0" Content="Mods" Background="#b7cba8"/>
+                </StackPanel>
+                <StackPanel Orientation="Horizontal" Margin="0,10,0,0" HorizontalAlignment="Right" Grid.Column="1">
+                    <Button x:Name="Nav_Button_Settings" HorizontalAlignment="Right" Style="{StaticResource MaterialDesignRaisedButton}" Margin="10,0,10,0" BorderThickness="0" Content="Settings" Background="#65a338" />
+                </StackPanel>
+            </Grid>
+
+            <!-- Overview -->
+            <StackPanel x:Name="Content_Panel_Overview" Visibility="Visible">
+                <materialDesign:Card Margin="10,20,10,10" Padding="15">
+                    <StackPanel>
+                        <TextBlock Style="{DynamicResource MaterialDesignHeadline4TextBlock}" FontWeight="Bold">Welcome to Shrek 2 Mod Manager!</TextBlock>
+                        <TextBlock Style="{DynamicResource MaterialDesignBody1TextBlock}" TextWrapping="WrapWithOverflow">You can use this to download, manage, install and play mods for Shrek 2.</TextBlock>
+                    </StackPanel>
+                </materialDesign:Card>
+                <StackPanel Orientation="Horizontal" Margin="10,0,10,10">
+                    <StackPanel Width="440">
+                        <materialDesign:Card Margin="0,10,10,10" Height="120" Cursor="Hand" x:Name="Overview_Button_PlayGame">
+                            <StackPanel>
+                                <StackPanel.Background>
+                                    <ImageBrush ImageSource="pack://siteoforigin:,,,/Resources/playshrek2_image.jpg" Stretch="UniformToFill" />
+                                </StackPanel.Background>
+                                <Border BorderBrush="{x:Null}" Height="120">
+                                    <TextBlock VerticalAlignment="Center" Foreground="White" HorizontalAlignment="Center" Style="{DynamicResource MaterialDesignHeadline4TextBlock}" FontWeight="Bold">Play Shrek 2 Modded</TextBlock>
+                                </Border>
+                            </StackPanel>
+                        </materialDesign:Card>
+                    </StackPanel>
+                    <StackPanel Width="440">
+                        <materialDesign:Card Margin="0,10,0,10" Height="120" Cursor="Hand" x:Name="Overview_Button_ManageMods">
+                            <StackPanel>
+                                <StackPanel.Background>
+                                    <ImageBrush ImageSource="pack://siteoforigin:,,,/Resources/openeditor_image.jpg" Stretch="UniformToFill" />
+                                </StackPanel.Background>
+                                <Border BorderBrush="{x:Null}" Height="120">
+                                    <TextBlock VerticalAlignment="Center" Foreground="White" HorizontalAlignment="Center" Style="{DynamicResource MaterialDesignHeadline4TextBlock}" FontWeight="Bold">Manage Mods</TextBlock>
+                                </Border>
+                            </StackPanel>
+                        </materialDesign:Card>
+                    </StackPanel>
+                </StackPanel>
+                <StackPanel Margin="10,40,10,10">
+                    <TextBlock Style="{DynamicResource MaterialDesignHeadline5TextBlock}" Foreground="Gray" FontWeight="Bold">New Mods</TextBlock>
+                    <StackPanel x:Name="Popular_Maps_Panel" Orientation="Horizontal" Margin="0,0,0,0">
+
+                    </StackPanel>
+                </StackPanel>
+            </StackPanel>
+
+            <!-- Maps -->
+            <StackPanel x:Name="Content_Panel_Maps" Visibility="Collapsed">
+                <StackPanel Orientation="Horizontal" Margin="10">
+                    <TextBox x:Name="Maps_Search_Text" Width="200" Padding="0" 
+                             materialDesign:TextFieldAssist.HasClearButton="True" 
+                             materialDesign:TextFieldAssist.UnderlineBrush="#65a338"
+                             materialDesign:HintAssist.Hint="Search for Maps"
+                             materialDesign:HintAssist.Foreground="Black"
+                             materialDesign:TextFieldAssist.TextBoxViewMargin="0"
+                             materialDesign:HintAssist.IsFloating="True"
+                             />
+                    <ComboBox x:Name="Maps_Search_Sorting" Width="200" Margin="10,0,0,0" 
+                              SelectedIndex="0"
+                              materialDesign:HintAssist.IsFloating="True" 
+                              materialDesign:TextFieldAssist.HasClearButton="True" 
+                              materialDesign:TextFieldAssist.UnderlineBrush="#65a338"
+                              materialDesign:HintAssist.Foreground="Black"
+                              materialDesign:HintAssist.Hint="Sorting">
+                        <ComboBoxItem Tag="1" Content="Newest" />
+                        <ComboBoxItem Tag="2" Content="Most Popular" />
+                        <ComboBoxItem Tag="3" Content="Most Viewed" />
+                    </ComboBox>
+                </StackPanel>
+                <StackPanel Margin="10">
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock Style="{DynamicResource MaterialDesignHeadline5TextBlock}" HorizontalAlignment="Left" Foreground="Gray" FontWeight="Bold">Maps</TextBlock>
+                    </StackPanel>
+                    <StackPanel x:Name="Maps_Panel" Height="450" Orientation="Vertical" Margin="0,0,0,0">
+
+                    </StackPanel>
+                </StackPanel>
+                <StackPanel x:Name="Maps_Pagination_Panel" Orientation="Horizontal" Margin="10,10,10,0" HorizontalAlignment="Center">
+
+                </StackPanel>
+            </StackPanel>
+
+            <!-- Mods -->
+            <StackPanel x:Name="Content_Panel_Mods" Visibility="Collapsed">
+                <StackPanel Orientation="Horizontal" Margin="10">
+                    <TextBox x:Name="Mods_Search_Text" Width="200" Padding="0" 
+                             materialDesign:TextFieldAssist.HasClearButton="True" 
+                             materialDesign:TextFieldAssist.UnderlineBrush="#65a338"
+                             materialDesign:HintAssist.Hint="Search for Mods"
+                             materialDesign:HintAssist.Foreground="Black"
+                             materialDesign:TextFieldAssist.TextBoxViewMargin="0"
+                             materialDesign:HintAssist.IsFloating="True"
+                             />
+                    <ComboBox x:Name="Mods_Search_Sorting" Width="200" Margin="10,0,0,0" 
+                              SelectedIndex="0"
+                              materialDesign:HintAssist.IsFloating="True" 
+                              materialDesign:TextFieldAssist.HasClearButton="True" 
+                              materialDesign:TextFieldAssist.UnderlineBrush="#65a338"
+                              materialDesign:HintAssist.Foreground="Black"
+                              materialDesign:HintAssist.Hint="Sorting">
+                        <ComboBoxItem Tag="1" Content="Newest" />
+                        <ComboBoxItem Tag="2" Content="Most Popular" />
+                        <ComboBoxItem Tag="3" Content="Most Viewed" />
+                    </ComboBox>
+                </StackPanel>
+                <StackPanel Margin="10">
+                    <TextBlock Style="{DynamicResource MaterialDesignHeadline5TextBlock}" Foreground="Gray" FontWeight="Bold">Mods</TextBlock>
+                    <StackPanel x:Name="Mods_Panel" Orientation="Vertical" Margin="0,0,0,0">
+
+                    </StackPanel>
+                </StackPanel>
+                <StackPanel x:Name="Mods_Pagination_Panel" Orientation="Horizontal" Margin="10,0,10,0" HorizontalAlignment="Center">
+
+                </StackPanel>
+            </StackPanel>
+        </StackPanel>
     </Grid>
 </Window>
