--- a/Shrek2ModdingSDK/Shrek2ModManager/MainWindow.xaml
+++ b/Shrek2ModdingSDK/Shrek2ModManager/MainWindow.xaml
@@ -7,7 +7,7 @@
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         TextElement.Foreground="{DynamicResource MaterialDesignBody}"
         TextElement.FontWeight="Regular"
-        ResizeMode="NoResize"
+        ResizeMode="CanMinimize"
         Loaded="Window_Loaded"
         WindowStartupLocation="CenterScreen"
         TextElement.FontSize="13"
